fix ui on iphone1

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   height: 100%;
   width: 100%;
 }
-.svg-container {
+/* .svg-container {
   display: flex;
   align-items: center;
 }
@@ -50,7 +50,7 @@
 .svg-container div {
   width: 100%;
   height: 100%;
-}
+} */
 
 @supports (not (-moz-appearance: button)) and (contain: paint) and
   (-webkit-appearance: none) {
